# archeon

./: .gitignore  ARCHITECTURE.md  KNOWN_ISSUES.md  LICENSE  PROGRESS.md  README.md  ROADMAP.md  SCHEMA.md  TEAMMATE_UPDATE_MEMBER_A.md  TEAMMATE_UPDATE_MEMBER_C.md  pyproject.toml
.claude/: settings.json
.github/workflows/: deploy-pages.yml
archeon/: __init__.py  cli.py  demo_queries.py  fixture_loader.py  ingest.py  ingest_pipeline.py  memory.py  query_engine.py  schema.py  utils.py  verify_cognee.py
archeon/extractors/: __init__.py  git_extractor.py  jsonl_io.py  pr_extractor.py  readme_extractor.py
archeon/lifecycle/: __init__.py  adr.py  demo_data.py  feedback.py  graph_loader.py  lifecycle.py  logger.py  orphan_detector.py  provider.py  state.py  status.py  watcher.py
demo/: README.md
demo/atlas-api/: README.md
demo/atlas-api/docs/: architecture-decisions.md
demo/atlas-api/history/: commits.jsonl  issues.md  pull-requests.md
demo/atlas-api/src/atlas_api/: __init__.py  app.py  sessions.py  storage.py
scripts/: demo_lifecycle.py  query_demo.py
site/: README.md  index.html  main.js  styles.css
site/assets/: logo-preview.html
tests/: README.md  lifecycle_fixtures.py  test_adr.py  test_cli_status.py  test_feedback.py  test_forget.py  test_git_extractor.py  test_ingest_pipeline.py  test_jsonl_io.py  test_lifecycle_status.py  test_memory.py  test_orphans.py  test_pr_extractor.py  test_query_engine.py  test_readme_extractor.py  test_schema.py  test_watcher.py
