[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "archeon"
version = "0.1.0"
description = "A Day 0 CLI skeleton for developer decision memory powered by Cognee."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
cognee = [
    "cognee>=0.1.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
archeon = "archeon.cli:main"

[tool.setuptools.packages.find]
include = ["archeon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
